**************************************************************
** MovieJukebox Release note
***************************************************************

MovieJukebox 2.3 BETA
---------------------
 - Enhancement  #1804 Adding a property to toggle IMDDB\Sratim cast source.
 - Fixed defect  #808 Trailers: Periodic rescan option
 - Enhancement   #997 Ability to turn off 'EXTRAS' processing
 - Enhancement  #1012 Separate index.htm XSL file
 - Enhancement  #1131 Smarter location of set artwork
 - Fixed defect #1267 Titles from IMDB may include their (year/roman numeral) format
 - Fixed defect #1416 Trailer doesn't download
 - Fixed defect #1499 Allocine plugin should use new XML API
 - Fixed defect #1629 Rating problem with Allocine plugin
 - Fixed defect #1604 Set poster is not picked up correctly for series with ":" in the name
 - Fixed defect #1655 ComingSoon plugin not run properly
 - Enhancement  #1671 Add New:TV and New:Movies categories
 - Enhancement  #1687 Only load the required poster scanner plugins
 - Enhancement  #1689 Scan folder name instead of file name
 - Fixed defect #1700 Local fanart in root directory not being used
 - Fixed defect #1702 ComingSoon plot and outline have TRAMA LUNGA & TRAMA BREVA in them
 - Fixed defect #1705 Apple Trailers URL is wrong, trailers don't download
 - Enhancement  #1706 Adding a property to toggle logical\visual Hebrew for new 200 series firmwares 
 - Fixed defect #1707 SET XML not correct (Looks like a movie XML)
 - Enhancement  #1710 Ability to use tvdbid field in NFO files
 - Enhancement  #1713 Better output for method file size
 - Fixed defect #1714 ComingSoon not work on new movie
 - Fixed defect #1719 Incorrect fanart retrieved from cache
 - Fixed defect #1720 MKVs with unmarked subtitles are falsely flagged as "NO"
 - Fixed defect #1726 Movie poster is still downloaded even with ID of -1 in NFO file.
 - Fixed defect #1727 scrapeLibrary in library.xml is not honored